# LLM-Benchmarks

./: .gitignore  AGENTS.md  README.md  RESULTS.md  pyproject.toml
benchmarks/llama-cpp/: definition.md  express_app.md  general_knowledge.md  math_reasoning.md
benchmarks/mlx-lm/: definition.md  express_app.md  general_knowledge.md  math_reasoning.md
benchmarks/ollama/: definition.md  express_app.md  general_knowledge.md  math_reasoning.md
benchmarks/reports/: RESULTS.md  index.html  results.db  results.db-shm
configs/: benchmark.yaml
docs/specs/: 2026-03-30-llm-benchmarks-design.md
llm_bench/: cli.py  config.py  metrics.py  models.py  report.py  runner.py  storage.py
llm_bench/backends/: __init__.py  base.py  llama_cpp.py  mlx_lm.py  ollama.py  vllm.py
llm_bench/prompts/: __init__.py  default.yaml
llm_bench/quality/: perplexity.py  tasks.py
tests/: conftest.py  test_config.py  test_metrics.py  test_models.py  test_runner.py  test_storage.py
tests/test_backends/: test_registry.py
